OPSMN-2309: CSS fixes to ensure large dropdown values are wrapped neatly. This issue was causing problem when selecting large clinical diagnosis in query filter interface

--- a/www/app/styles/md-input.css
+++ b/www/app/styles/md-input.css
@@ -108,6 +108,10 @@
   background: transparent;
 }
 
+.os-md-input .ui-select-bootstrap > .ui-select-match .btn-link {
+  right: 0px!important;
+}
+
 .os-md-input .ui-select-bootstrap > .ui-select-match > .ui-select-toggle:hover {
   background: transparent;
 }
